fix for bug 100855: paragraph fromat feedback from editor inaccurate.  r=brade; sr=kin